<resources>
    <string name="app_name">Driver</string>
    <string name="signup_driver"> ثبت نام</string>
    <string name="back">بازگشت</string>
    <string name="signin">تایید و ورود</string>
    <string name="signin_drivers">ورود به پنل سفیران</string>
    <string name="resend">ارسال مجدد کد تایید</string>
    <string name="profile">پروفایل</string>
    <string name="exit_profile">خروج از حساب</string>
    <string name="home">خانه</string>
    <string name="income">درآمد</string>
    <string name="incomes">درآمدها</string>
    <string name="today_income">درآمد امروز</string>
    <string name="week_income">درآمد این هفته</string>
    <string name="month_income">درآمد این ماه</string>
    <string name="reward">جایزه</string>
    <string name="financial_gp">گروه مالی</string>
    <string name="Score">امتیاز</string>
    <string name="nationalNum">کدملی</string>
    <string name="idNumber">شماره شناسنامه</string>
    <string name="age">سن</string>
    <string name="address">آدرس</string>
    <string name="phone">موبایل</string>
    <string name="father">نام پدر</string>
    <string name="sheba">شماره شبا </string>
    <string name="travels">سفرها</string>
    <string name="request_area">مناطق درخواست</string>
    <string name="today_online_time">ساعات آنلاین امروز</string>
    <string name="week_online">ساعات آنلاین هفته</string>
    <string name="month_online">ساعات آنلاین ماه</string>
    <string name="remain_day">تعداد روزهای باقی مانده ی کمیسیون</string>
    <string name="whole_income">درآمد کل</string>
    <string name="day">روز</string>
    <string name="hour">ساعت</string>
    <string name="comis">کمیسیون کل</string>
    <string name="toman">تومان</string>
    <string name="traveldetail">جزئیات سفر</string>
    <string name="history">لیست سفرها</string>
    <string name="send">ارسال کد تایید</string>
    <string name="send_pic">ارسال</string>
    <string name="area">مناطق پر درخواست</string>
    <string name="lot">زیاد</string>
    <string name="without">بدون</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="little">کم</string>
    <string name="debug">اشکال زدایی</string>
    <string name="update">به روز رسانی</string>
    <string name="salary_detail">جزئیات درآمد</string>
    <string name="num">#شماره پیگیری</string>
    <string name="account">مشخصات حساب</string>
    <string name="save">ثبت</string>
    <string name="delete">حذف</string>
    <string name="attention">توجه:</string>
    <string name="msg_sheba">تنها روزی یکبار قادر به تنظیمات این قسمت هستید!</string>
    <string name="account_owner">نام صاحب حساب : </string>
    <string name="current_sheba_num">شماره شبای کنونی:</string>
    <string name="connect_internet">ارتباط با اینترنت</string>
    <string name="clinic_net">کلینیک اینترنت</string>
    <string name="communication_way">نوع ارتباط</string>
    <string name="gps_situation">وضعیت مکان یاب</string>
    <string name="gps_quality">کیفیت مکان یاب</string>
    <string name="activity_situation">وضعیت فعالیت</string>
    <string name="server">سرور</string>
    <string name="give_code">دریافت کد تایید</string>
    <string name="payment">طرف پرداخت</string>
    <string name="payment_permission">حق پرداخت</string>
    <string name="buy">حمل/خرید</string>
    <string name="back_">برگشت</string>
    <string name="shipping_cost">هزینه ی حمل</string>
    <string name="see_details">مشاهده ی جزئیات</string>
    <string name="driver_type">نوع سفیر</string>
    <string name="driver_name">نام سفیر</string>
    <string name="stop">توقف</string>
    <string name="send_photo">ارسال مدارک</string>
    <string name="email_address">آدرس ایمیل</string>
    <string name="mobile_num">شماره تلفن همراه</string>
    <string name="sheba_num">شماره شبا</string>
    <string name="up_photo">ارسال عکس ها و مدارک</string>
    <string name="meli_card">کارت ملی</string>
    <string name="choose_photo">انتخاب عکس</string>
    <string name="identity">شناسنامه</string>
    <string name="driving_licence">گواهینامه</string>
    <string name="card2">پایان خدمت</string>
    <string name="green_paper">برگ سبز</string>
    <string name="water_bill">قبض آب</string>
    <string name="bill2">قبض برق</string>
    <string name="vehicle_type">نوع وسیله نقلیه</string>
    <string name="continue_register">ادامه</string>
    <string name="save_photo">میخواهید عکس را ارسال کنید؟</string>
    <string name="cancel">انصراف</string>
    <string name="select_action">انتخاب کنید</string>
    <string name="select_photo">انتخاب عکس از گالری</string>
    <string name="capture_photo">گرفتن عکس با دوربین</string>
    <string name="ready">آماده ی پذیرش درخواست هستم</string>
    <string name="confirm">قبول درخواست</string>
    <string name="details">جزئیات</string>
    <string name="agree">قبول دارم</string>
    <!--   <string name="linkToSite"><a href="">قوانین و مقررات</a></string>
    -->
    <string name="linkToSite">قوانین و مقررات</string>
    <string name="call_support">تماس با پشتیبانی</string>
    <string name="learn">آموزش کار با اپلیکیشن</string>
    <string name="telegram_channel">کانال تلگرام سفیران</string>
    <string name="driver_card">کارت حساب سفیر</string>
    <string name="pass">رمز عبور ارسال شده</string>
    <string name="msg_signup">شما میتوانید از این قسمت نسبت به ثبت نام بعنوان سفیر دیجی پیک اقدام کنید! سپس یک رسید برای شما ارسال میشود که شما میتوانید با ارائه ی رسید ارسال شده و اصل شناسنامه خود به یکی از مراکز ثبت نام، حساب خود را فعال کنید.</string>


    <string-array name="vehicle_arrays">
        <item>موتور بار</item>
        <item>موتور مسافر/ بار</item>
        <item>وانت و نیسان</item>
        <item>سواری</item>
        <item>سواری سنکین</item>
    </string-array>
    <!-- exception messages    -->
    <string name="exp_null">عملیات با خطا مواجه شد</string>
    <string name="exp_connection">خطا در برقراری ارتباط</string>
    <string name="exp_update_location_stopped">مکان یابی متوقف شد!</string>
    <string name="exp_location_setting">مکان یاب دستگاه خاموش است</string>
    <string name="exp_invalid_phone">شماره تلفن وارد شده صحیح نمی باشد</string>
    <string name="exp_wrong_code">کد فعالسازی وارد شده اشتباه است</string>
    <string name="exp_wrong_phone">شماره همراه وارد شده صحیح نیست</string>
    <string name="exp_law">لطفا قوانین و مقررات را تایید کنید</string>
    <string name="exp_anonymous">از حساب کاربری خود خارج شوید </string>
    <string name="exp_null_doc">مدارک به درستی ارسال نشده است</string>
    <string name="exp_null_id">خطا در دریافت درخواست</string>

    <!-- success messages    -->
    <string name="success_visibility">درخواست های سفر برای شما ارسال می شود</string>
    <string name="success_code">کد فعالسازی با موفقیت ارسال شد</string>
    <string name="success_sheba">اطلاعات حساب با موفقیت ثبت شد</string>
    <string name="success_accept">درخواست پذیرفته شد</string>
</resources>




