<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color08"
    android:layoutDirection="rtl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color06"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/debug"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_return"
            style="@style/tv_return"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintLeft_toRightOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:src="@drawable/ic_chevron_right_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_return"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color08"
        app:layout_constraintBottom_toTopOf="@id/guideline_underHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape_dark_blue">

        </View>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_underHeader"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationY="-40dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintLeft_toRightOf="@id/guideline_left"
        app:layout_constraintRight_toLeftOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/guideline_underHeader">


        <TextView
            android:id="@+id/tv_connect_net"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/connect_internet"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_connect_net" />

        <TextView
            android:id="@+id/tv_clinic_net"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/clinic_net"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_clinic_net" />

        <TextView
            android:id="@+id/tv_communication"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/communication_way"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/view3" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/tv_communication"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_communication" />

        <TextView
            android:id="@+id/tv_gps"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/gps_situation"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/view4" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_gps" />

        <TextView
            android:id="@+id/tv_gps_quality"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/gps_quality"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/view5" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_gps_quality" />

        <TextView
            android:id="@+id/tv_activity_situation"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/activity_situation"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/view6" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_activity_situation" />

        <TextView
            android:id="@+id/tv_server"
            style="@style/debug_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/server"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/view7" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_aboveEnd"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color08"
        app:layout_constraintBottom_toTopOf="@id/guideline_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_aboveEnd">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape_green"
            android:scaleX="-1"
            android:scaleY="-1">

        </View>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <LinearLayout
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green"
        android:gravity="center"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/guideline_end">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/limit_icon_signup_bottom" />

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:text="@string/signup_driver" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>