<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color08">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color06"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:src="@drawable/ic_edit_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_return"
            style="@style/tv_return"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintLeft_toRightOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.2" />

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:src="@drawable/ic_chevron_right_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_return"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color08"
        app:layout_constraintBottom_toTopOf="@id/guideline_underHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape_dark_blue">

        </View>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_underHeader"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_thirty_radius_white"
        android:translationY="-40dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_underHeader"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/tv1"
            style="@style/common_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="15dp"
            android:text="@string/current_sheba_num"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintTop_toBottomOf="@id/tv1">

            <EditText
                style="@style/dark_blue_15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                style="@style/white_15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/back_ten_radius_pink"
                android:drawableStart="@drawable/ic_clear_white_24dp"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toBottomOf="@id/lin1">

            <TextView
                style="@style/common_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/account_owner" />

            <TextView
                style="@style/dark_blue_15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1.5"
                android:text="محمدرضا" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/con"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            style="@style/dark_pink_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/attention" />

        <TextView
            style="@style/dark_blue_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/msg_sheba" />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_aboveEnd"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color08"
        app:layout_constraintBottom_toTopOf="@id/guideline_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_aboveEnd">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape_green"
            android:scaleX="-1"
            android:scaleY="-1">

        </View>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <LinearLayout
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green"
        android:gravity="center"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/guideline_end">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/limit_icon_signup_bottom" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:onClick="OnRegisterClick"
            android:text="@string/save" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>